src/test/ui/parser/new-unicode-escapes-1.stderr
error: unterminated unicode escape (needed a `}`)
  --> $DIR/new-unicode-escapes-1.rs:2:14
   |
LL |     let s = "\u{2603";
   |              ^^^^^^^

error: aborting due to previous error

