src/test/ui/parser/new-unicode-escapes-1.rs
pub fn main() {
    let s = "\u{2603"; //~ ERROR unterminated unicode escape (needed a `}`)
}
